# pnfl-playpool

./: .gitignore  ARCHITECTURE.md  README.md  STATUS.md  TEST_STATUS.md  pyproject.toml  pyrightconfig.json
src/pnfl_playpool/: __init__.py  pool.py
tests/: conftest.py  test_play_pool.py
tests/data/plays/Defense/34RunLeft/: AF31rl3H.ply  AF31rl3I.ply  AF31rl3z.ply  AF31rlD7.ply  AF31rlDR.ply  AF31rlDS.ply  AF31rlDX.ply  AF31rlM2.ply  AF31rlN2.ply  AF31rlST.ply  AF32rl03.ply  AF32rl3F.ply  AF32rl3G.ply  AF32rl4s.ply  AF32rlJR.ply  AF32rlM2.ply  AF32rlPL.ply  AF32rlZD.ply  AF32rlpz.ply  AF33rl5m.ply  AF33rlMZ.ply  AF33rlZM.ply  AF33rlc1.ply  AF33rlm5.ply  AT32rl35.ply  AT32rl3Z.ply  AT32rl53.ply  AT32rlEB.ply  AT32rlEM.ply  AT32rlG1.ply  AT32rlG2.ply  AT32rlRE.ply  AT32rlSO.ply  AT32rlZ3.ply  AT33m1RL.ply  AT33rlG1.ply  AT33rlG3.ply  AT33rlK1.ply  AT33rlK2.ply  AT33rlK3.ply  (+284 more)
tests/data/plays/Defense/34RunMiddle/: AF31rmBG.ply  AF31rmD7.ply  AF31rmDR.ply  AF31rmDZ.ply  AF31rmQD.ply  AF31rmR2.ply  AF31rmRM.ply  AF31rmVV.ply  AF31rmZC.ply  AF32rmB4.ply  AF32rmBL.ply  AF32rmZ3.ply  AF32rmZD.ply  AF33RM04.ply  AF33RM05.ply  AF33rm5.ply  AF33rm53.ply  AT332Nrm.ply  AT332rmN.ply  AT33RM2M.ply  AT33RM5M.ply  AT33RME3.ply  AT33RMGE.ply  AT33RMZO.ply  AT33rmC2.ply  AT33rmN4.ply  AT3rm1W5.ply  AT3rm2W5.ply  AT3rm3W5.ply  AT3rm4W5.ply  AT3rmbSZ.ply  AT3rmxSZ.ply  ATF3O3rm.ply  ATF3RMsz.ply  ATF3RMzs.ply  ATF3rmx2.ply  ATF3rmz1.ply  ATF3rrRM.ply  ATF3z3rm.ply  AZ32RMcs.ply  (+180 more)
tests/data/plays/Defense/34RunRight/: AF31rrBG.ply  AF31rrDJ.ply  AF31rrDR.ply  AF31rrQD.ply  AF31rrZC.ply  AF32rr33.ply  AF32rr4r.ply  AF32rrCm.ply  AF32rrZD.ply  AF33rr33.ply  AF33rr5.ply  AT33RR01.ply  ATF3O3rr.ply  ATF3RR02.ply  ATF3n2RR.ply  ATF3rr3b.ply  ATF3rrRR.ply  ATF3rrx2.ply  ATF3rrz1.ply  ATF3z3rr.ply  AZ31RR4D.ply  Atl3RR05.ply  Atl3RR06.ply  Atl3RR07.ply  Atl3RR08.ply  Atl3RR09.ply  Atl3RR13.ply  Atl3RR14.ply  Atl3RR17.ply  Atl3RR18.ply  Atl3RR19.ply  Atl3RR22.ply  Atl3RR23.ply  Atl3RR24.ply  Atl3RR25.ply  Atl3RR26.ply  Atl3RR27.ply  Atl3RR28.ply  Atl3RR30.ply  Atl3RR32.ply  (+110 more)
tests/data/plays/Defense/43RunLeft/: AF41rl2p.ply  AF41rl2z.ply  AF41rl52.ply  AF41rl5m.ply  AF41rlX2.ply  AF41rlm4.ply  AT4rlSTR.ply  AZ43RLTV.ply  Atl4RL20.ply  CC41rlG1.ply  CC41rlV5.ply  CF2rlMZF.ply  DB41rlV1.ply  DB41rlX1.ply  GB42RLZ.ply  JJ40rlW9.ply  JJ43rlZB.ply  KC42rlQB.ply  LA41rlRx.ply  LA42rlB1.ply  LA42rlRW.ply  LAC42RLp.PLY  LArl42wc.ply  LV4rl6Bt.ply  NY41RL00.ply  NY41rlV1.ply  NY41rlV2.ply  NY41rlV3.ply  NY41rlV4.ply  NY41rlX1.ply  NY41rlxZ.ply  NY42rLR1.ply  NY42rlX1.ply  NY4rlFox.ply  NY4rlSpy.ply  NY4rlXNS.ply  NY4rlXTC.ply  OR41RLOC.ply  OR42rl3K.ply  OR42rlTC.ply  (+17 more)
tests/data/plays/Defense/43RunMiddle/: AF41rmBE.ply  AF43RM03.ply  Atl4RM01.ply  Atl4RM02.ply  Atl4RM05.ply  Atl4RM06.ply  Atl4RM07.ply  Atl4RM10.ply  BB4RM002.PLY  BB4RM004.ply  BM43rmRD.PLY  BM43rmRW.PLY  DB40rmZ4.ply  DB41rmV2.ply  DB42rmHB.ply  DB43rm2s.ply  DB43rmV0.ply  DB43rmv1.ply  DB4RM01.ply  DB4RM02.ply  DB4rmLSD.ply  DC42RM01.ply  DL42RM1R.ply  DL42RM1Z.ply  DL42RM2R.ply  GB43RM1.ply  (+51 more)
tests/data/plays/Special/: AF-KR.ply  AF-ON-R.ply  AF-PR.ply  AF-PUNT.ply  AFONSIDE.ply  AR-PUNT.ply  ATF42KR.ply  ATF42PR.ply  AZPR-CB1.ply  BC-ON-R.ply  BCFGPAT.ply  BCFGPATD.ply  BCFREEK.ply  BCFREERT.ply  BCONSIDE.ply  BCSQUIB.ply  BCSQUIBR.ply  BillsKR.ply  BillsPR.ply  CBFGPAT.ply  CBKO.ply  CBKR.ply  CBPR.ply  CIN-FGD.ply  CIN-FGXP.ply  CIN-FREK.ply  CIN-FRER.ply  CIN-KO.ply  CIN-KR.ply  CIN-ONS.ply  CIN-ONSD.ply  CIN-PR.ply  CIN-PUNT.ply  CIN-SQB.ply  CIN-SQBR.ply  COLTKICK.PLY  COWBOYFG.ply  DAL-KR1.ply  DAL-PR1.ply  DB-KR0.ply  (+259 more)
tests/expected/: play_pool_snapshot.json
(+3800 files in other folders)
